; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/hwmgr/extr_smu8_hwmgr.c_smu8_construct_boot_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/hwmgr/extr_smu8_hwmgr.c_smu8_construct_boot_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pp_hwmgr = type { %struct.smu8_hwmgr* }
%struct.smu8_hwmgr = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32, i64, i64, i64, i64, i64, i64, i64, i64, i32 }
%struct.TYPE_3__ = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pp_hwmgr*)* @smu8_construct_boot_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smu8_construct_boot_state(%struct.pp_hwmgr* %0) #0 {
  %2 = alloca %struct.pp_hwmgr*, align 8
  %3 = alloca %struct.smu8_hwmgr*, align 8
  store %struct.pp_hwmgr* %0, %struct.pp_hwmgr** %2, align 8
  %4 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %2, align 8
  %5 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %4, i32 0, i32 0
  %6 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %5, align 8
  store %struct.smu8_hwmgr* %6, %struct.smu8_hwmgr** %3, align 8
  %7 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %3, align 8
  %8 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %3, align 8
  %12 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 9
  store i32 %10, i32* %13, align 8
  %14 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %3, align 8
  %15 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %14, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %3, align 8
  %19 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 8
  store i64 %17, i64* %20, align 8
  %21 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %3, align 8
  %22 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 7
  store i64 0, i64* %23, align 8
  %24 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %3, align 8
  %25 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 6
  store i64 0, i64* %26, align 8
  %27 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %3, align 8
  %28 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  store i32 1, i32* %29, align 8
  %30 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %3, align 8
  %31 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 5
  store i64 0, i64* %32, align 8
  %33 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %3, align 8
  %34 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %33, i32 0, i32 0
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 4
  store i64 0, i64* %35, align 8
  %36 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %3, align 8
  %37 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i32 0, i32 3
  store i64 0, i64* %38, align 8
  %39 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %3, align 8
  %40 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 2
  store i64 0, i64* %41, align 8
  %42 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %3, align 8
  %43 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %42, i32 0, i32 0
  %44 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %43, i32 0, i32 1
  store i64 0, i64* %44, align 8
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
